--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -6,7 +6,7 @@
       "name": "1104_粘性抵抗と慣性抵抗",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWrW4UhFplu0RatRXjIXNw",
+      "authorship_tag": "ABX9TyM6bhjVxkgnklVaONpEVt6Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,12 +101,12 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "7tK2uHgaLl0M",
-        "outputId": "fe7089cb-0374-4375-8655-b29fdd88b962",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "id": "7tK2uHgaLl0M",
+        "outputId": "fe7089cb-0374-4375-8655-b29fdd88b962"
       },
       "source": [
         "#@title 実験: 滑りなし条件の確認\n",
@@ -195,10 +195,78 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "AnUkngjnT4QD"
+      },
+      "source": [
+        "\\begin{align}\n",
+        "F \\propto \\eta \\dfrac{v}{L} L^2\n",
+        "\\end{align}\n",
+        "半径 $r$ の球の場合は\n",
+        "\\begin{align}\n",
+        "F = 6 \\pi \\eta r v\n",
+        "\\end{align}\n",
+        "\n",
+        "$v$ は流体中の物体の速度"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oooy2qkUHyMt"
       },
       "source": [
         "### 慣性抵抗"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        },
+        "cellView": "form",
+        "id": "MxDe5INgNfgV",
+        "outputId": "2bb1f20b-99c6-4319-be3e-f37783f52b64"
+      },
+      "source": [
+        "#@title 渦の発生\n",
+        "%%html \n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6iSPEceGU6zv"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "教科書 p128 図11.17 を参考に\n",
+        "\\begin{align}\n",
+        "p_A + \\dfrac{1}{2} \\rho \\cancelto{0}{v_A^2} = p_{\\infty} + \\dfrac{1}{2} \\rho{v^2}\n",
+        "\\end{align}\n",
+        "より、作用する流体の抵抗は\n",
+        "\\begin{align}\n",
+        "F = \\dfrac{1}{2} C \\rho A v^2.\n",
+        "\\end{align}"
       ]
     },
     {
@@ -211,25 +279,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Fb3yWdapIJbZ"
-      },
-      "source": [
-        "- https://en.wikipedia.org/wiki/Laminar_flow\n",
-        "- https://en.wikipedia.org/wiki/Turbulence"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "3QhyIEBQOI3J",
-        "outputId": "baec36f2-4e51-4109-a634-60a427535119",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "id": "3QhyIEBQOI3J",
+        "outputId": "baec36f2-4e51-4109-a634-60a427535119"
       },
       "source": [
         "#@title 層流\n",
@@ -258,12 +316,12 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "9gMpdW3sO7ga",
-        "outputId": "faf3dcf7-9356-4bb8-8728-c05b47cfa32c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "id": "9gMpdW3sO7ga",
+        "outputId": "faf3dcf7-9356-4bb8-8728-c05b47cfa32c"
       },
       "source": [
         "#@title 生活実験: 層流と乱流\n",
@@ -289,55 +347,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "form",
-        "id": "MxDe5INgNfgV",
-        "outputId": "6310938b-f4cb-4a5c-c66c-2b44b74abb29",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
-        }
-      },
-      "source": [
-        "#@title カルマン渦\n",
-        "%%html \n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KrrDb9BMH64d"
       },
       "source": [
         "### 力学的相似則とレイノルズ数"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "q3JWOtSKI7sk"
-      },
-      "source": [
-        "\b- https://en.wikipedia.org/wiki/Similitude_(model)"
       ]
     }
   ]
