Colaboratory を使用して作成しました

--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -6,7 +6,7 @@
       "name": "1104_粘性抵抗と慣性抵抗",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM6bhjVxkgnklVaONpEVt6Z",
+      "authorship_tag": "ABX9TyNBQu1XeGnPeNTEQGt1u2nU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/cUTkqZeiMow\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -184,6 +184,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fYRazTrABnUY",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        },
+        "outputId": "b41079fc-1764-4a5b-b813-7e4a22cd81a3"
+      },
+      "source": [
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/wn6eRMIOJ1k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/wn6eRMIOJ1k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bllXPriMHwGu"
@@ -234,7 +266,7 @@
         "%%html \n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MSaYzDKG5QU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -294,7 +326,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/p08_KlTKP50\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -328,7 +360,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/VoBc60iUq2I\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -353,6 +385,19 @@
       },
       "source": [
         "### 力学的相似則とレイノルズ数"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q3JWOtSKI7sk"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "\\begin{align}\n",
+        "Re &= \\dfrac{\\cancel{\\frac{1}{2}} \\bcancel{C} \\rho v^2 \\cancelto{L^2}{A}}{n v L}\\\\\n",
+        "&= \\dfrac{\\rho v^2 L^2}{\\eta v L} = \\dfrac{\\rho v L}{\\eta}\n",
+        "\\end{align}"
       ]
     }
   ]
