Colaboratory を使用して作成しました

--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -6,8 +6,7 @@
       "name": "1104_粘性抵抗と慣性抵抗",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBQu1XeGnPeNTEQGt1u2nU",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNBQu1XeGnPeNTEQGt1u2nU"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kzhkAKT/Phys2AKTuniv/blob/draft/01_Jan/1104_%E7%B2%98%E6%80%A7%E6%8A%B5%E6%8A%97%E3%81%A8%E6%85%A3%E6%80%A7%E6%8A%B5%E6%8A%97.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
