clean: after lecture

--- a/01_Jan/1101_静止流体の圧力.ipynb
+++ b/01_Jan/1101_静止流体の圧力.ipynb
@@ -6,7 +6,7 @@
       "name": "1101_静止流体の圧力",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyXOLCpBJ6BZCOuWSPfQnu",
+      "authorship_tag": "ABX9TyM+cZ8q+IoJiA11Pomo0S0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
         "圧力(Pressure)の定義\n",
         "\n",
         "$$\n",
-        "P = \\dfrac{F}{S}\n",
+        "P = \\dfrac{F}{S}　\b= \\dfrac{F}{A}　\n",
         "$$\n",
         "\n",
         "* 力 $F$ は, 接触している面積 $S$ を **垂直に** 押す力です.(概念図参照)\n",
@@ -644,6 +644,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pYHjXpiCd7sI"
+      },
+      "source": [
+        "\b圧力の単位 mmHg"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "erQqhU-SOUmC"
       },
       "source": [
@@ -784,7 +793,7 @@
         "id": "tMZcqW87OUtb"
       },
       "source": [
-        "### 浮力とアルキメデス"
+        "### 浮力とアルキメデスの原理"
       ]
     },
     {
