clean: after lecture

--- a/01_Jan/1102_ベルヌーイの法則.ipynb
+++ b/01_Jan/1102_ベルヌーイの法則.ipynb
@@ -6,7 +6,7 @@
       "name": "1102_ベルヌーイの法則",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5rJ027EBL7jvT1C+CSdsD",
+      "authorship_tag": "ABX9TyMN89/yhm9oMUiFeMOzxpm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,18 +58,18 @@
       "metadata": {
         "cellView": "form",
         "id": "Wm2qMwyEfDzB",
-        "outputId": "84b1e766-0b58-449f-a804-1cec279b43e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "84b1e766-0b58-449f-a804-1cec279b43e0"
       },
       "source": [
         "#@title 定常流の実験\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/-GIToNj-m4M?start=114\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -107,7 +107,7 @@
         "id": "z3t6NU1MDAut"
       },
       "source": [
-        "### 連続の方程式"
+        "### 連続方程式"
       ]
     },
     {
@@ -139,7 +139,7 @@
         "\n",
         "整理すると\n",
         "\\begin{align}\n",
-        "\\rho_1 A_1  v_1 &= \\rho_1 A_2 v_2\\\\\n",
+        "\\rho_1 A_1  v_1 &= \\rho_2 A_2 v_2\\\\\n",
         "\\rho A  v &={const.}\n",
         "\\end{align}\n",
         "この関係式を **流体の連続方程式** と言います。"
@@ -188,7 +188,7 @@
         "id": "T-bMCnjLprlI"
       },
       "source": [
-        "#### 定理の成り立つ条件\n",
+        "#### 法則の成り立つ条件\n",
         "- 非圧縮性完全流体の定常流\n",
         "  1. $\\rho := const.$\n",
         "  2. $\\Delta E := 0$, エネルギーの損失なし/粘性力は無視する\n",
@@ -219,7 +219,7 @@
         "\n",
         "\\begin{align}\n",
         "&p \\Delta V+ \\dfrac{1}{2} \\rho\\Delta V v^2 + \\rho \\Delta Vg h = const\\cdot \\Delta V.\\\\[]\n",
-        "&\\Delta W_p + \\dfrac{1}{2} \\Delta m \\ V v^2  + \\Delta m \\ g h  \n",
+        "&\\Delta W_p + \\dfrac{1}{2} \\Delta m  v^2  + \\Delta m \\ g h  \n",
         "=const\\cdot \\Delta V.\n",
         "\\end{align}\n",
         "\n",
@@ -308,18 +308,18 @@
       "metadata": {
         "cellView": "form",
         "id": "RtSuCJO4ui7d",
-        "outputId": "3f771d0b-8a5f-40ce-be3b-5adae4ac485d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "3f771d0b-8a5f-40ce-be3b-5adae4ac485d"
       },
       "source": [
         "#@title 実験: トリチェリの法則\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/0EsUiBhBIX8\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -362,7 +362,7 @@
       },
       "source": [
         "$\\require{cancel}$\n",
-        "ベルヌーイの法則を利用して、上図の流体が流れる管の太さの違いによる圧力さを求めます。\n",
+        "ベルヌーイの法則を利用して、上図の流体が流れる管の太さの違いによる圧力差を求めます。\n",
         "\n",
         "まずは、黒い点から出発している流速について、ベルヌーイの法則を適用します。\n",
         "\n",
@@ -447,18 +447,18 @@
       "metadata": {
         "cellView": "form",
         "id": "XvoorKhez4CZ",
-        "outputId": "fbc612a1-8ee9-4031-b9f6-a792a506aca0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "fbc612a1-8ee9-4031-b9f6-a792a506aca0"
       },
       "source": [
         "#@title 実験: ベンチュリ管\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/hLZkPFrQCDk\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
