add: the colab link

--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -18,6 +18,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kzhkAKT/Phys2AKTuniv/blob/draft/01_Jan/1104_%E7%B2%98%E6%80%A7%E6%8A%B5%E6%8A%97%E3%81%A8%E6%85%A3%E6%80%A7%E6%8A%B5%E6%8A%97.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pSIrAx6Gc8H3"
       },
       "source": [
@@ -188,7 +198,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/wn6eRMIOJ1k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
