open closed cells

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0wcv45ytPuW0+rb48XeCl",
+      "authorship_tag": "ABX9TyMEjEmYb8vIEUqXPvI22r8q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,11 +153,11 @@
       "metadata": {
         "id": "KWhrGheppb3h",
         "cellView": "form",
-        "outputId": "92fba503-65a8-473b-aba4-de276d4a2c6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "92fba503-65a8-473b-aba4-de276d4a2c6a"
       },
       "source": [
         "#@title What is the Zeroth Law of Thermodynamics? / The Royal Institution\n",
@@ -205,11 +205,11 @@
       "metadata": {
         "id": "KhFv_Lu6Q7xj",
         "cellView": "form",
-        "outputId": "1bfd57c1-a7dd-430b-853d-58aff2e5e9be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "1bfd57c1-a7dd-430b-853d-58aff2e5e9be"
       },
       "source": [
         "#@title 氷(ice)から水蒸気(vapor)へ\n",
@@ -239,11 +239,11 @@
       "metadata": {
         "id": "cdxOgNjVR7GA",
         "cellView": "form",
-        "outputId": "93ac30a6-1018-4e05-cc43-1f083a5e86f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "93ac30a6-1018-4e05-cc43-1f083a5e86f5"
       },
       "source": [
         "#@title 氷の相転移の温度変化測定\n",
@@ -405,7 +405,9 @@
         "![https://en.wikipedia.org/wiki/Phase_diagram](https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Phase-diag2.svg/500px-Phase-diag2.svg.png)\n",
         "\n",
         "---\n",
-        "[Phase diagram](https://en.wikipedia.org/wiki/Phase_diagram)\n"
+        "[Phase diagram](https://en.wikipedia.org/wiki/Phase_diagram)\n",
+        "\n",
+        "緑破線は水の固相|液相の境界\n"
       ]
     },
     {
@@ -460,11 +462,11 @@
       "metadata": {
         "id": "5NkiG4K-IZ7j",
         "cellView": "form",
-        "outputId": "7f962671-b78e-4609-b5ba-52c3a4638e98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "7f962671-b78e-4609-b5ba-52c3a4638e98"
       },
       "source": [
         "#@title 熱運動の基本\n",
@@ -496,11 +498,11 @@
       "metadata": {
         "id": "oneCy4t_JAFD",
         "cellView": "form",
-        "outputId": "976f14fd-09fe-4b3e-c8be-1d28458abc3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "976f14fd-09fe-4b3e-c8be-1d28458abc3e"
       },
       "source": [
         "#@title 熱運動(P,V,T)\n",
@@ -562,11 +564,11 @@
       "metadata": {
         "id": "OkaGV387NNAi",
         "cellView": "form",
-        "outputId": "791e1082-7572-4e31-a0f5-5270f4d646a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "791e1082-7572-4e31-a0f5-5270f4d646a9"
       },
       "source": [
         "#@title 熱: エネルギーの移動形態\n",
@@ -648,11 +650,11 @@
       "metadata": {
         "id": "XKzG3W61QC1l",
         "cellView": "form",
-        "outputId": "1a57f4c3-7676-4cf9-e2b4-846674be6da0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "1a57f4c3-7676-4cf9-e2b4-846674be6da0"
       },
       "source": [
         "#@title 仕事と熱の関係\n",
@@ -682,11 +684,11 @@
       "metadata": {
         "id": "G--uoKyzQD3P",
         "cellView": "form",
-        "outputId": "20108986-58fc-458c-8071-6352721c0f99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "20108986-58fc-458c-8071-6352721c0f99"
       },
       "source": [
         "#@title 仕事等量の測定: 英国人ジュールが用いた手法\n",
@@ -867,11 +869,11 @@
       "metadata": {
         "id": "obyzAywY5_BU",
         "cellView": "form",
-        "outputId": "6f76ef03-ca0e-4461-ad7d-6ae415f82edc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "6f76ef03-ca0e-4461-ad7d-6ae415f82edc"
       },
       "source": [
         "#@title 熱膨張の実験\n",
@@ -901,11 +903,11 @@
       "metadata": {
         "id": "1MdDJZ_86Qmn",
         "cellView": "form",
-        "outputId": "486bf073-0f0c-4c81-91b7-0fb558428d1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "486bf073-0f0c-4c81-91b7-0fb558428d1e"
       },
       "source": [
         "#@title \n",
@@ -946,11 +948,11 @@
       "metadata": {
         "id": "lQBkvSs36cIb",
         "cellView": "form",
-        "outputId": "6c8f0073-9976-4708-f047-66626ac9382e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "6c8f0073-9976-4708-f047-66626ac9382e"
       },
       "source": [
         "#@title 軌条の熱膨張\n",
@@ -980,11 +982,11 @@
       "metadata": {
         "id": "zUQ8KzXqOdTA",
         "cellView": "form",
-        "outputId": "1e013d35-ad86-4b35-b57f-1ea09ad81429",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
-        }
+        },
+        "outputId": "1e013d35-ad86-4b35-b57f-1ea09ad81429"
       },
       "source": [
         "#@title 線膨張率を導出する概念図\n",
@@ -1052,7 +1054,7 @@
         "id": "637kb_PbvJZ9"
       },
       "source": [
-        "## 質問への回答"
+        "## R02年度: 質問への回答"
       ]
     },
     {
@@ -1069,18 +1071,18 @@
       "metadata": {
         "id": "8YjLexdsvNEE",
         "cellView": "form",
-        "outputId": "10d9d0aa-27e8-4ec7-946d-49b7fa6d5c16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 330
-        }
+        },
+        "outputId": "10d9d0aa-27e8-4ec7-946d-49b7fa6d5c16"
       },
       "source": [
         "#@title Density of water vs temperature at different pressures (in MPa) [DOI:10.1063/1.1851510]\n",
         "%%html\n",
         "<a href=\"https://www.researchgate.net/figure/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the_fig5_7991287\"><img src=\"https://www.researchgate.net/profile/Edgar_Zanotto/publication/7991287/figure/fig5/AS:279285362380808@1443598227359/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the.png\" alt=\"Density of water vs temperature at different pressures (in MPa) as specified in the figure (Ref. 27). The line crossing the curves obtained for different pressures specifies the location of the density maximum. At the left-hand side of this line, the thermal expansion coefficient is negative. To the right-hand side of this line, the thermal expansion coefficient is positive.\"/></a>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
